--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
