--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.8",
     "next": "^14.2.25",
     "react": "^18.2.0",
